--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack-dev-server --content-base public",
     "storybook": "start-storybook -s ./public -p 6006",
     "test": "mocha './src/**/*_test.js' --require @babel/register --reporter dot --require init-mocha.js",
-    "coverage": "nyc --exclude=['*_test.js'] --reporter=html --reporter=text mocha './src/**/*_test.js' --require init-mocha.js --require @babel/register --reporter dot",
+    "coverage": "nyc --reporter=html --reporter=text mocha './src/**/*_test.js' --require init-mocha.js --require @babel/register --reporter dot",
     "tdd": "mocha './src/**/*_test.js' --require @babel/register --reporter dot --watch --require init-mocha.js",
     "format": "prettier --write './src/**/*' modheaders.json",
     "cypress": "cypress open"
@@ -80,5 +80,9 @@
   },
   "optionalDependencies": {
     "cypress": "^6.8.0"
+  },
+  "nyc": {
+    "include": "src",
+    "exclude": "src/**/*_test.js"
   }
 }
