--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "coverage": "nyc --reporter=html --reporter=text mocha './src/**/*_test.js' --require @babel/register --reporter dot",
     "tdd": "mocha './src/**/*_test.js' --require @babel/register --reporter dot --watch --require init-mocha.js",
     "format": "prettier --write './src/**/*' modheaders.json",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "docs": "jsdoc -r -c ./jsdoc/conf.json"
   },
   "browserslist": [
     "defaults"
@@ -79,6 +80,9 @@
     "turndown": "^7.0.0"
   },
   "optionalDependencies": {
-    "cypress": "^6.8.0"
+    "cypress": "^6.8.0",
+    "docdash": "^1.2.0",
+    "jsdoc": "^3.6.7",
+    "sveltedoc-parser": "^4.1.0"
   }
 }
