--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "tdd": "mocha './src/**/*_test.js' --require @babel/register --reporter dot --watch --require init-mocha.js",
     "format": "prettier --write './src/**/*' modheaders.json",
     "cypress": "cypress open",
-    "docs": "jsdoc -r -c ./jsdoc/conf.json"
+    "build:docs": "jsdoc -r -c ./jsdoc/conf.json",
+    "watch:docs": "nodemon --exec npm run build:docs --watch src"
   },
   "browserslist": [
     "defaults"
@@ -83,6 +84,7 @@
     "cypress": "^6.8.0",
     "docdash": "^1.2.0",
     "jsdoc": "^3.6.7",
+    "nodemon": "^2.0.12",
     "sveltedoc-parser": "^4.1.0"
   }
 }
